--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,8 @@
+body {
+    width: 100%;
+    margin: 0 auto;
+}
+
 header {
     margin: 0 auto;
     width: 100%;
@@ -90,21 +95,5 @@ nav li:hover::before {
     75% { top: 0; left: 100%; }
     100% { top: 100%; left: 100%; } 
 }
-
-/* @keyframes thirdCircle {
-    0% { top: 100%; left: 0; } 
-    25% { top: 0; left: 0; }
-    50% { top: 0; left: 100%; } 
-    75% { top: 100%; left: 100%; }
-    100% { top: 100%; left: 0; } 
-}
-
-@keyframes fourthCircle {
-    0% { top: 0; left: 100%; } 
-    25% { top: 100%; left: 100%; }
-    50% { top: 100%; left: 0; } 
-    75% { top: 0; left: 0; }
-    100% { top: 0; left: 100%; } 
-} */
 
 
